Use Set/List of methods in unit tests
- Sort LampAction skills alphabetically