@@ -23,9 +23,6 @@ import com.fasterxml.jackson.databind.SerializationFeature;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
@@ -103,81 +100,65 @@ class QuestRepositoryTest {
       Quest questB = new Quest.Builder(0).withAccess(QuestAccess.FREE).withRequirements(
           new QuestRequirements.Builder()
               .withCombat(new CombatRequirement.Builder().withLevel(40).withIronman(true).build())
-              .withSkills(new HashSet<>(Arrays.asList(
+              .withSkills(Set.of(
                   new SkillRequirement.Builder().withLevel(50).withSkill(Skill.AGILITY).build(),
                   new SkillRequirement.Builder().withLevel(60).withSkill(Skill.AGILITY)
-                      .withRecommended(true).build()))).build())
+                      .withRecommended(true).build())).build())
           .withRewards(new QuestRewards.Builder().withQuestPoints(2).build()).withTitle("b")
           .withDisplayName("b").withType(QuestType.SAGA).build();
       Quest questC = new Quest.Builder(1).withAccess(QuestAccess.MEMBERS).withRewards(
-          new QuestRewards.Builder().withLamps(new HashSet<>(Arrays.asList(
+          new QuestRewards.Builder().withLamps(Set.of(new LampReward.Builder().withExclusive(true)
+                  .withRequirements(
+                      new MapBuilder<Set<Skill>, Integer>().put(Set.of(Skill.ATTACK, Skill.DEFENCE), 1)
+                          .put(Set.of(Skill.CONSTITUTION, Skill.STRENGTH), 1).build())
+                  .withType(LampType.XP).withXp(35000).build(),
               new LampReward.Builder().withExclusive(true).withRequirements(
-                  new MapBuilder<Set<Skill>, Integer>()
-                      .put(new HashSet<>(Arrays.asList(Skill.ATTACK, Skill.DEFENCE)), 1)
-                      .put(new HashSet<>(Arrays.asList(Skill.CONSTITUTION, Skill.STRENGTH)), 1)
-                      .build()).withType(LampType.XP).withXp(35000).build(),
-              new LampReward.Builder().withExclusive(true).withRequirements(
-                  new MapBuilder<Set<Skill>, Integer>()
-                      .put(new HashSet<>(Arrays.asList(Skill.ATTACK, Skill.DEFENCE)), 1)
-                      .put(new HashSet<>(Arrays.asList(Skill.CONSTITUTION, Skill.STRENGTH)), 1)
-                      .build()).withType(LampType.XP).withXp(20000).build()))).withQuestPoints(5)
-              .build()).withTitle("c").withDisplayName("c").withType(QuestType.SAGA).build();
+                  new MapBuilder<Set<Skill>, Integer>().put(Set.of(Skill.ATTACK, Skill.DEFENCE), 1)
+                      .put(Set.of(Skill.CONSTITUTION, Skill.STRENGTH), 1).build())
+                  .withType(LampType.XP).withXp(20000).build())).withQuestPoints(5).build())
+          .withTitle("c").withDisplayName("c").withType(QuestType.SAGA).build();
       Quest questD = new Quest.Builder(2).withAccess(QuestAccess.MEMBERS).withRequirements(
           new QuestRequirements.Builder()
               .withCombat(new CombatRequirement.Builder().withLevel(40).build())
               .withQuestPoints(new QuestPointsRequirement.Builder().withAmount(2).build())
-              .withQuests(new HashSet<>(Arrays.asList(new QuestRequirement.Builder(questB).build(),
-                  new QuestRequirement.Builder(questC).build()))).withSkills(new HashSet<>(Arrays
-              .asList(
-                  new SkillRequirement.Builder().withLevel(30).withSkill(Skill.HERBLORE).build(),
-                  new SkillRequirement.Builder().withLevel(50).withSkill(Skill.RANGED).build())))
-              .build()).withRewards(new QuestRewards.Builder().withLamps(new HashSet<>(Arrays
-          .asList(new LampReward.Builder().withType(LampType.SMALL_XP).build(),
+              .withQuests(Set.of(new QuestRequirement.Builder(questB).build(),
+                  new QuestRequirement.Builder(questC).build())).withSkills(
+              Set.of(new SkillRequirement.Builder().withLevel(30).withSkill(Skill.HERBLORE).build(),
+                  new SkillRequirement.Builder().withLevel(50).withSkill(Skill.RANGED).build()))
+              .build()).withRewards(new QuestRewards.Builder().withLamps(
+          Set.of(new LampReward.Builder().withType(LampType.SMALL_XP).build(),
               new LampReward.Builder().withRequirements(new MapBuilder<Set<Skill>, Integer>()
-                  .put(new HashSet<>(Arrays.asList(Skill.MINING, Skill.SMITHING)), 10).build())
-                  .withSingleChoice(true).withType(LampType.XP).withXp(1000).build(),
+                  .put(Set.of(Skill.MINING, Skill.SMITHING), 10).build()).withSingleChoice(true)
+                  .withType(LampType.XP).withXp(1000).build(),
               new LampReward.Builder().withMultiplier(1.5).withRequirements(
-                  new MapBuilder<Set<Skill>, Integer>().put(Collections.singleton(Skill.AGILITY), 1)
-                      .build()).withType(LampType.MEDIUM_XP).build(),
+                  new MapBuilder<Set<Skill>, Integer>().put(Set.of(Skill.AGILITY), 1).build())
+                  .withType(LampType.MEDIUM_XP).build(),
               new LampReward.Builder().withType(LampType.DRAGONKIN).build(),
-              new LampReward.Builder().withRequirements(new MapBuilder<Set<Skill>, Integer>()
-                  .put(Collections.singleton(Skill.AGILITY), 20)
-                  .put(Collections.singleton(Skill.ATTACK), 20)
-                  .put(Collections.singleton(Skill.CONSTITUTION), 20)
-                  .put(Collections.singleton(Skill.CONSTRUCTION), 20)
-                  .put(Collections.singleton(Skill.COOKING), 20)
-                  .put(Collections.singleton(Skill.CRAFTING), 20)
-                  .put(Collections.singleton(Skill.DEFENCE), 20)
-                  .put(Collections.singleton(Skill.DIVINATION), 20)
-                  .put(Collections.singleton(Skill.DUNGEONEERING), 20)
-                  .put(Collections.singleton(Skill.FARMING), 20)
-                  .put(Collections.singleton(Skill.FIREMAKING), 20)
-                  .put(Collections.singleton(Skill.FISHING), 20)
-                  .put(Collections.singleton(Skill.FLETCHING), 20)
-                  .put(Collections.singleton(Skill.HERBLORE), 20)
-                  .put(Collections.singleton(Skill.HUNTER), 20)
-                  .put(Collections.singleton(Skill.INVENTION), 20)
-                  .put(Collections.singleton(Skill.MAGIC), 20)
-                  .put(Collections.singleton(Skill.MINING), 20)
-                  .put(Collections.singleton(Skill.PRAYER), 20)
-                  .put(Collections.singleton(Skill.RANGED), 20)
-                  .put(Collections.singleton(Skill.RUNECRAFTING), 20)
-                  .put(Collections.singleton(Skill.SLAYER), 20)
-                  .put(Collections.singleton(Skill.SMITHING), 20)
-                  .put(Collections.singleton(Skill.STRENGTH), 20)
-                  .put(Collections.singleton(Skill.SUMMONING), 20)
-                  .put(Collections.singleton(Skill.THIEVING), 20)
-                  .put(Collections.singleton(Skill.WOODCUTTING), 20).build()).withType(LampType.XP)
-                  .withXp(1000).build(), new LampReward.Builder().withRequirements(
-                  new MapBuilder<Set<Skill>, Integer>().put(new HashSet<>(Arrays
-                      .asList(Skill.AGILITY, Skill.ATTACK, Skill.CONSTITUTION, Skill.CONSTRUCTION,
+              new LampReward.Builder().withRequirements(
+                  new MapBuilder<Set<Skill>, Integer>().put(Set.of(Skill.AGILITY), 20)
+                      .put(Set.of(Skill.ATTACK), 20).put(Set.of(Skill.CONSTITUTION), 20)
+                      .put(Set.of(Skill.CONSTRUCTION), 20).put(Set.of(Skill.COOKING), 20)
+                      .put(Set.of(Skill.CRAFTING), 20).put(Set.of(Skill.DEFENCE), 20)
+                      .put(Set.of(Skill.DIVINATION), 20).put(Set.of(Skill.DUNGEONEERING), 20)
+                      .put(Set.of(Skill.FARMING), 20).put(Set.of(Skill.FIREMAKING), 20)
+                      .put(Set.of(Skill.FISHING), 20).put(Set.of(Skill.FLETCHING), 20)
+                      .put(Set.of(Skill.HERBLORE), 20).put(Set.of(Skill.HUNTER), 20)
+                      .put(Set.of(Skill.INVENTION), 20).put(Set.of(Skill.MAGIC), 20)
+                      .put(Set.of(Skill.MINING), 20).put(Set.of(Skill.PRAYER), 20)
+                      .put(Set.of(Skill.RANGED), 20).put(Set.of(Skill.RUNECRAFTING), 20)
+                      .put(Set.of(Skill.SLAYER), 20).put(Set.of(Skill.SMITHING), 20)
+                      .put(Set.of(Skill.STRENGTH), 20).put(Set.of(Skill.SUMMONING), 20)
+                      .put(Set.of(Skill.THIEVING), 20).put(Set.of(Skill.WOODCUTTING), 20).build())
+                  .withType(LampType.XP).withXp(1000).build(), new LampReward.Builder()
+                  .withRequirements(new MapBuilder<Set<Skill>, Integer>().put(
+                      Set.of(Skill.AGILITY, Skill.ATTACK, Skill.CONSTITUTION, Skill.CONSTRUCTION,
                           Skill.COOKING, Skill.CRAFTING, Skill.DEFENCE, Skill.DIVINATION,
                           Skill.DUNGEONEERING, Skill.FARMING, Skill.FIREMAKING, Skill.FISHING,
                           Skill.FLETCHING, Skill.HERBLORE, Skill.HUNTER, Skill.INVENTION,
                           Skill.MAGIC, Skill.MINING, Skill.PRAYER, Skill.RANGED, Skill.RUNECRAFTING,
                           Skill.SLAYER, Skill.SMITHING, Skill.STRENGTH, Skill.SUMMONING,
-                          Skill.THIEVING, Skill.WOODCUTTING)), 10).build()).withType(LampType.XP)
-                  .withXp(100).build()))).withQuestPoints(3).build()).withTitle("d")
+                          Skill.THIEVING, Skill.WOODCUTTING), 10).build()).withType(LampType.XP)
+                  .withXp(100).build())).withQuestPoints(3).build()).withTitle("d")
           .withDisplayName("d").withType(QuestType.MINIQUEST).build();
 
       Set<Quest> loadedQuests = minimalQuestRepository.getQuests();
@@ -194,25 +175,23 @@ class QuestRepositoryTest {
       Quest questB = new Quest.Builder(0).withAccess(QuestAccess.FREE).withRequirements(
           new QuestRequirements.Builder()
               .withCombat(new CombatRequirement.Builder().withLevel(40).withIronman(true).build())
-              .withSkills(new HashSet<>(Arrays.asList(
+              .withSkills(Set.of(
                   new SkillRequirement.Builder().withLevel(50).withSkill(Skill.AGILITY).build(),
                   new SkillRequirement.Builder().withLevel(60).withSkill(Skill.AGILITY)
-                      .withRecommended(true).build()))).build())
+                      .withRecommended(true).build())).build())
           .withRewards(new QuestRewards.Builder().withQuestPoints(2).build()).withTitle("b")
           .withDisplayName("b").withType(QuestType.SAGA).build();
       Quest questC = new Quest.Builder(1).withAccess(QuestAccess.MEMBERS).withRewards(
-          new QuestRewards.Builder().withLamps(new HashSet<>(Arrays.asList(
+          new QuestRewards.Builder().withLamps(Set.of(new LampReward.Builder().withExclusive(true)
+                  .withRequirements(
+                      new MapBuilder<Set<Skill>, Integer>().put(Set.of(Skill.ATTACK, Skill.DEFENCE), 1)
+                          .put(Set.of(Skill.CONSTITUTION, Skill.STRENGTH), 1).build())
+                  .withType(LampType.XP).withXp(35000).build(),
               new LampReward.Builder().withExclusive(true).withRequirements(
-                  new MapBuilder<Set<Skill>, Integer>()
-                      .put(new HashSet<>(Arrays.asList(Skill.ATTACK, Skill.DEFENCE)), 1)
-                      .put(new HashSet<>(Arrays.asList(Skill.CONSTITUTION, Skill.STRENGTH)), 1)
-                      .build()).withType(LampType.XP).withXp(35000).build(),
-              new LampReward.Builder().withExclusive(true).withRequirements(
-                  new MapBuilder<Set<Skill>, Integer>()
-                      .put(new HashSet<>(Arrays.asList(Skill.ATTACK, Skill.DEFENCE)), 1)
-                      .put(new HashSet<>(Arrays.asList(Skill.CONSTITUTION, Skill.STRENGTH)), 1)
-                      .build()).withType(LampType.XP).withXp(20000).build()))).withQuestPoints(5)
-              .build()).withTitle("c").withDisplayName("c").withType(QuestType.SAGA).build();
+                  new MapBuilder<Set<Skill>, Integer>().put(Set.of(Skill.ATTACK, Skill.DEFENCE), 1)
+                      .put(Set.of(Skill.CONSTITUTION, Skill.STRENGTH), 1).build())
+                  .withType(LampType.XP).withXp(20000).build())).withQuestPoints(5).build())
+          .withTitle("c").withDisplayName("c").withType(QuestType.SAGA).build();
 
       Set<Quest> loadedQuests = minimalQuestRepository.getQuests();
 
